--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,20 +1,37 @@
-<single-spa-router>
+<single-spa-router mode="history">
   <main>
-    <redirect from="/" to="/login"></redirect>
+    <!-- <redirect from="/" to="/login"></redirect> -->
+    <!-- <redirect from="/" to="/login"></redirect> -->
+    <application name="mf-authentication"></application>
 
-    <!-- LOGIN MF -->
-    <route path="/login">
-      <application name="@single-spa/login"></application>
+    <route path="/comercial">
+      <div style="display: flex; height: 100%; width: 100%; overflow: hidden">
+        <div>
+          <application name="mf-sidebar"></application>
+        </div>
+        <div style="flex: 1; overflow: auto">
+          <route path="/consultas">
+            <application name="mf-com-consultas"></application>
+          </route>
+          <route path="/comercializacion">
+            <application name="mf-com-comercializacion"></application>
+          </route>
+        </div>
+      </div>
+    </route>
+    <route path="/operaciones">
+      <div style="display: flex; height: 100%; width: 100%; overflow: hidden">
+        <div>
+          <application name="mf-sidebar"></application>
+        </div>
+        <div style="flex: 1; overflow: auto">
+          <route path="/reclamos">
+            <application name="mf-ope-reclamos"></application>
+          </route>
+        </div>
+      </div>
     </route>
 
-    <!-- MENU MF -->
-    <route path="/menu">
-      <application name="@single-spa/menu"></application>
-    </route>
-
-    <!-- RUTA DEFAULT / ERROR 404 -->
-    <route default>
-      <h1>404 Not Found</h1>
-    </route>
+    <!-- <redirect default to="/login"></redirect> -->
   </main>
 </single-spa-router>
