--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -1,14 +1,16 @@
 <single-spa-router mode="history">
   <main>
-    <!-- <redirect from="/" to="/login"></redirect> -->
-    <!-- <redirect from="/" to="/login"></redirect> -->
-    <application name="mf-authentication"></application>
+    <route path="/login">
+      <application name="mf-authentication"></application>
+    </route>
+    <route path="/public">
+      <application name="mf-authentication"></application>
+    </route>
 
     <route path="/comercial">
-      <div style="display: flex; height: 100%; width: 100%; overflow: hidden">
-        <div>
-          <application name="mf-sidebar"></application>
-        </div>
+      <application name="mf-authentication"></application>
+      <div style="display: flex; height: 100%; width: 100%; overflow: hidden; margin-top: 4rem;">
+        <application name="mf-sidebar"></application>
         <div style="flex: 1; overflow: auto">
           <route path="/consultas">
             <application name="mf-com-consultas"></application>
@@ -20,7 +22,7 @@
       </div>
     </route>
     <route path="/operaciones">
-      <div style="display: flex; height: 100%; width: 100%; overflow: hidden">
+      <div style="display: flex; height: 100%; width: 100%; overflow: hidden; margin-top: 4rem;">
         <div>
           <application name="mf-sidebar"></application>
         </div>
@@ -31,7 +33,11 @@
         </div>
       </div>
     </route>
-
-    <!-- <redirect default to="/login"></redirect> -->
+    <route default>
+      <div style="padding: 20px;">
+        <h1>Página no encontrada</h1>
+        <p>La página que buscas no existe o no tienes permisos para acceder.</p>
+      </div>
+    </route>
   </main>
 </single-spa-router>
