--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -22,6 +22,7 @@
       </div>
     </route>
     <route path="/operaciones">
+      <application name="mf-authentication"></application>
       <div style="display: flex; height: 100%; width: 100%; overflow: hidden; margin-top: 4rem;">
         <div>
           <application name="mf-sidebar"></application>
@@ -30,6 +31,17 @@
           <route path="/reclamos">
             <application name="mf-ope-reclamos"></application>
           </route>
+        </div>
+      </div>
+    </route>
+    <route path="/seguridad">
+      <application name="mf-authentication"></application>
+      <div style="display: flex; height: 100%; width: 100%; overflow: hidden; margin-top: 4rem;">
+        <div>
+          <application name="mf-sidebar"></application>
+        </div>
+        <div style="flex: 1; overflow: auto">
+          <application name="mf-seguridad"></application>
         </div>
       </div>
     </route>
