--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -10,44 +10,44 @@
           <application name="mf-authentication"></application>
         </route>
 
-        <route path="/comercial">
-          <application name="mf-authentication"></application>
-          <div style="display: flex;">
+        <div class="layout-container">
+          <route path="/comercial">
+            <application name="mf-authentication"></application>
             <application name="mf-sidebar"></application>
-            <div style="flex: 1; overflow: auto">
-              <route path="/consultas">
-                <application name="mf-com-consultas"></application>
-              </route>
-              <route path="/comercializacion">
-                <application name="mf-com-comercializacion"></application>
-              </route>
+            <div class="layout-content-wrapper">
+              <div class="layout-content">
+                <route path="/consultas">
+                  <application name="mf-com-consultas"></application>
+                </route>
+                <route path="/comercializacion">
+                  <application name="mf-com-comercializacion"></application>
+                </route>
+              </div>
             </div>
-          </div>
-        </route>
-        <route path="/operaciones">
-          <application name="mf-authentication"></application>
-          <div style="display: flex; height: 100%; width: 100%; overflow: hidden; margin-top: 4rem;">
-            <div>
-              <application name="mf-sidebar"></application>
+          </route>
+          <route path="/operaciones">
+            <application name="mf-authentication"></application>
+            <div style="display: flex; height: 100%; width: 100%; overflow: hidden; margin-top: 4rem;">
+              <div>
+                <application name="mf-sidebar"></application>
+              </div>
+              <div style="flex: 1; overflow: auto">
+                <route path="/reclamos">
+                  <application name="mf-ope-reclamos"></application>
+                </route>
+              </div>
             </div>
-            <div style="flex: 1; overflow: auto">
-              <route path="/reclamos">
-                <application name="mf-ope-reclamos"></application>
-              </route>
+          </route>
+          <route path="/seguridad">
+            <application name="mf-authentication"></application>
+            <application name="mf-sidebar"></application>
+            <div class="layout-content-wrapper">
+              <div class="layout-content">
+                <application name="mf-seguridad"></application>
+              </div>
             </div>
-          </div>
-        </route>
-        <route path="/seguridad">
-          <application name="mf-authentication"></application>
-          <div style="display: flex; height: 100%; width: 100%; overflow: hidden;">
-            <div>
-              <application name="mf-sidebar"></application>
-            </div>
-            <div style="flex: 1; overflow: auto">
-              <application name="mf-seguridad"></application>
-            </div>
-          </div>
-        </route>
+          </route>
+        </div>
         <route default>
           <div style="padding: 20px;">
             <h1>Página no encontrada</h1>
