--- a/src/microfrontend-layout.html
+++ b/src/microfrontend-layout.html
@@ -19,6 +19,9 @@
             <route path="/comercializacion">
               <application name="mf-com-comercializacion"></application>
             </route>
+            <route path="/administracion">
+              <application name="mf-com-administracion"></application>
+            </route>
           </div>
         </div>
       </route>
